Created a splash screen

--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -43,7 +43,7 @@
                     <button type="submit">Sign Up</button>
                 </div>
                 <div class="dontAcc">
-                    <p>Already have an account? <a href="../index.html"><i>Sign In</i></a></p>
+                    <p>Already have an account? <a href="signin.html"><i>Sign In</i></a></p>
                 </div>
             </div>
         </div>
