--- a/HTML/messages.html
+++ b/HTML/messages.html
@@ -17,7 +17,7 @@
                 <li><a href="/HTML/messages.html">Messages</a></li>
                 <li><a href="connections.html">Connections</a></li>
                 <li><a href="notifications.html">Notifications</a></li>
-                <li><a href="../index.html">Sign Out</a></li>
+                <li><a href="signin.html">Sign Out</a></li>
             </ul>
         </div>
         <div class="user-profile">
