--- a/index.html
+++ b/index.html
@@ -3,36 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-In</title>
+    <title>Welcome</title>
     <link rel="icon" href="../RESOURCES/image.png">
-    <link rel="stylesheet" href="../CSS/signIn.css">
+    <link rel="stylesheet" href="/CSS/index.css">
+
 </head>
 <body>
-    <form id="signinForm">
-        <div class="form-content">
-            <img src="/RESOURCES/image.png" alt="logo">
-            <h2>Sign-In</h2>
-            <div class="form-info">
-                <label for="txtUserName">Username</label>
-                <input type="text" id="txtUserName" placeholder="Enter Your Username">
-                <span id="usernameError" class="error"></span>
 
-                <label for="txtPass">Password</label>
-                <div class="password-wrapper">
-                    <input type="password" id="txtPass" placeholder="Enter Your Password">
-                    <button type="button" id="togglePass">Show</button>
-                </div>
-                <span id="passwordError" class="error"></span>
 
-                <div class="logBtn">
-                    <button type="submit">Sign In</button>
-                </div>
-                <div class="dontAcc">
-                    <p>Don't have an account? <a href="/HTML/signUp.html"><i>Sign Up</i></a></p>
-                </div>
-            </div>
-        </div>
-    </form>
-<script src="/JavaScript/signin.js"></script>
+    <div id="splash">
+        <img src="/RESOURCES/image.png" alt="Logo">
+    </div>
+
+<script src="/JavaScript/index.js"></script>
+
 </body>
 </html>
