Fixed the signup form validation

--- a/HTML/notFacebook.html
+++ b/HTML/notFacebook.html
@@ -14,9 +14,9 @@
             <img src="../RESOURCES/image.png" alt="">
             <ul>
                 <li><a href="notFacebook.html">Home</a></li>
-                <li><a href="/HTML/messages.html">Messages</a></li>
+                <!-- <li><a href="/HTML/messages.html">Messages</a></li>
                 <li><a href="connections.html">Connections</a></li>
-                <li><a href="notifications.html">Notifications</a></li>
+                <li><a href="notifications.html">Notifications</a></li> -->
                 <li><a href="signin.html">Sign Out</a></li>
             </ul>
         </div>
